--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "dsv-wrapper",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "finance.js",
   "scripts": {
     "start": "index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
