--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "agentkeepalive": "^2.1.1",
     "atob": "^2.0.3",
     "connect": "^3.4.1",
+    "express": "^4.13.4",
     "http-proxy": "^1.13.2",
     "jsdom": "^8.4.0",
     "ramda": "^0.21.0",
